--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Lates Newsx</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | Latest News</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
